<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.soorinpark.afinal.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Switch
        android:text="@string/dairy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dairySwitch"
        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Spinner
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:id="@+id/icSpinner"
        app:layout_constraintLeft_toLeftOf="@+id/nameEditText"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <ToggleButton
        android:text="@string/cup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cupToggleButton"
        app:layout_constraintBottom_toBottomOf="@+id/icSpinner"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/icSpinner"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:id="@+id/icRadioGroup"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/icSpinner"
        app:layout_constraintLeft_toLeftOf="@+id/icSpinner"
        >

        <RadioButton
            android:text="@string/icecream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icRadioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/froyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/froyoRadioButton" />

        <RadioButton
            android:text="@string/gelato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gelatoRadioButton"
            android:layout_weight="1" />
    </RadioGroup>

    <CheckBox
        android:text="@string/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sprinklesCB"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/icRadioGroup"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:text="@string/hotfudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hotFudgeCB"
        app:layout_constraintBottom_toBottomOf="@+id/sprinklesCB"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/sprinklesCB"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/nutsCB"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <CheckBox
        android:text="@string/nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nutsCB"
        app:layout_constraintBottom_toBottomOf="@+id/hotFudgeCB"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:text="@string/treatme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/treatMeButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/hotFudgeCB" />

    <TextView
        android:layout_width="195dp"
        android:id="@+id/icSummary"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/treatMeButton"
        app:layout_constraintRight_toLeftOf="@+id/icImage"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:srcCompat="@drawable/chocolate"
        android:id="@+id/icImage"
        app:layout_constraintBottom_toBottomOf="@+id/icSummary"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:text="@string/findtreat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findTreatButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/icSummary"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
